sandbox/output
StringCalculator.java:9: error: cannot find symbol
        if(temp.size == 1){
               ^
  symbol:   variable size
  location: variable temp of type String[]
1 error
